--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,3 +23,10 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+    - name: set env
+      env: 
+        RELEASE_VERSION: 0.0.1-initial
+    - name: Package project
+      run: |
+        nuget pack HACT.Dtos -Version $RELEASE_VERSION
+        ls
