--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,8 +25,9 @@ jobs:
       run: dotnet test --no-build --verbosity normal
     - name: set env
       env: 
-        RELEASE_VERSION: 0.0.1-initial
+        RELEASE_VERSION: 0.0.1-initiall
     - name: Package project
       run: |
         nuget pack HACT.Dtos -Version $RELEASE_VERSION
-        ls
+        ls -la $GITHUB_WORKSPACE
+        ls -la
