--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -24,3 +24,8 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal
 
+  release:
+    runs-on: ubuntu-latest
+    steps:
+    - name: build
+      run: dotnet build
