--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,9 +23,12 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
-
-  release:
-    runs-on: ubuntu-latest
-    steps:
-    - name: build
-      run: dotnet build
+    - name: set env
+      run: echo $RELEASE_VERSION
+      env:
+        RELEASE_VERSION: 0.0.1-initiall"
+    - name: Package project
+      run: |
+        ls -la $GITHUB_WORKSPACE
+        ls -la
+  
