--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,8 +27,9 @@ jobs:
       run: echo $RELEASE_VERSION
       env:
         RELEASE_VERSION: 0.0.1-initiall"
+    - name: Install Nuget
+      run: sudo curl -o /usr/local/bin/nuget.exe https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
     - name: Package project
       run: |
+        nuget pack HACT.Dtos -Version $RELEASE_VERSION
         ls -la $GITHUB_WORKSPACE
-        ls -la
-  
