--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,7 +27,7 @@ jobs:
       run: sudo curl -o /usr/local/bin/nuget.exe https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
     - name: Package project
       env:
-        RELEASE_VERSION: 0.0.1-initiall"
+        RELEASE_VERSION: 0.0.1-test
       run: |
         nuget pack HACT.Dtos -Version $RELEASE_VERSION
         ls -la 
