--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,8 +7,23 @@ on:
     branches: [ main ]
 
 jobs:
+  test:
+    name: Test and Format
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Setup .NET
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: 5.0.x
+      - name: Install dotnet format
+        run: dotnet tool update --global dotnet-format
+      - name: Run dotnet format
+        run: dotnet format --check --verbosity diagnostic
+      - name: Test
+        run: dotnet test --no-build --verbosity normal
   build:
-
+    needs: test
     runs-on: ubuntu-latest
 
     steps:
@@ -32,8 +47,8 @@ jobs:
       env:
         RELEASE_VERSION: 0.0.1-test
       run: |
-        nuget pack HACT.Dtos -Version ${{steps.set-release-version.outputs.RELEASE_VERSION}} 
-        ls -la 
+        nuget pack HACT.Dtos -Version ${{steps.set-release-version.outputs.RELEASE_VERSION}}
+        ls -la
     - name: Publish project
       env:
         PATH: HACT.Dtos.${{steps.set-release-version.outputs.RELEASE_VERSION}}.nupkg
