--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,7 +3,7 @@ name: HACT.Dtos
 on:
   release:
     types: [ published ]
- 
+
 
 jobs:
   build:
@@ -22,7 +22,7 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
-      
+
   release:
     needs: build
     runs-on: ubuntu-latest
@@ -31,7 +31,19 @@ jobs:
       - uses: actions/checkout@v2
       - name: set env
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-      - name: Test
+      - name: set env var
         run: |
           echo $RELEASE_VERSION
           echo ${{ env.RELEASE_VERSION }}
+      - name: Install Nuget
+        run: sudo curl -o /usr/local/bin/nuget.exe https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
+      - name: Package project
+        run: |
+          nuget pack HACT.Dtos -Version ${{env.RELEASE_VERSION}}
+          ls -la
+      - name: Publish project
+        env:
+          PACKAGE_PATH: HACT.Dtos.${{env.RELEASE_VERSION}}.nupkg
+        run: |
+          echo $PWD
+          dotnet nuget push $PACKAGE_PATH --api-key ${{ secrets.nuget_api_key }} --source https://api.nuget.org/v3/index.json
