--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,10 +37,8 @@ jobs:
           echo ${{ env.RELEASE_VERSION }}
       - name: Install Nuget
         run: sudo curl -o /usr/local/bin/nuget.exe https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
-      - name: Restore dependencies
-        run: dotnet restore
       - name: Build
-        run: dotnet build --no-restore
+        run: dotnet build
       - name: Package project
         run: |
           nuget pack HACT.Dtos -Version ${{env.RELEASE_VERSION}}
