--- a/HACT.Dtos/HACT.Dtos.csproj
+++ b/HACT.Dtos/HACT.Dtos.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net5.0</TargetFramework>
     <PackageId>HACT.Dtos</PackageId>
     <PackageVersion>0.0.1-initial</PackageVersion>
-    <Authors>MT</Authors>
+    <Authors>Made Tech</Authors>
     <Company>City Of Lincoln Council</Company>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
