--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,14 +35,11 @@ jobs:
         run: |
           echo $RELEASE_VERSION
           echo ${{ env.RELEASE_VERSION }}
-      - name: Install Nuget
-        run: sudo curl -o /usr/local/bin/nuget.exe https://dist.nuget.org/win-x86-commandline/latest/nuget.exe
       - name: Build
         run: dotnet build
       - name: Package project
         run: |
-          nuget pack HACT.Dtos -Version ${{env.RELEASE_VERSION}}
-          ls -la
+          dotnet pack --configuration Release /p:Version=${{env.RELEASE_VERSION}}
       - name: Publish project
         env:
           PACKAGE_PATH: HACT.Dtos.${{env.RELEASE_VERSION}}.nupkg
