--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,6 +31,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: set env
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+      - name: set artifacts directory env
+        run: echo "ARTIFACTS_DIRECTORY=artifacts"
       - name: set env var
         run: |
           echo $RELEASE_VERSION
@@ -39,10 +41,10 @@ jobs:
         run: dotnet build
       - name: Package project
         run: |
-          dotnet pack --configuration Release /p:Version=${{env.RELEASE_VERSION}}
+          dotnet pack --configuration Release /p:Version=${{env.RELEASE_VERSION}} -o ${{env.ARTIFACTS_DIRECTORY}}
       - name: Publish project
         env:
-          PACKAGE_PATH: HACT.Dtos.${{env.RELEASE_VERSION}}.nupkg
+          PACKAGE_PATH: ${{env.ARTIFACTS_DIRECTORY}}/HACT.Dtos.${{env.RELEASE_VERSION}}.nupkg
         run: |
           echo $PWD
           dotnet nuget push $PACKAGE_PATH --api-key ${{ secrets.nuget_api_key }} --source https://api.nuget.org/v3/index.json
