--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,7 +32,7 @@ jobs:
       - name: set env
         run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
       - name: set artifacts directory env
-        run: echo "ARTIFACTS_DIRECTORY=artifacts"
+        run: echo "ARTIFACTS_DIRECTORY=artifacts" >> $GITHUB_ENV
       - name: set env var
         run: |
           echo $RELEASE_VERSION
