--- a/HACT.Dtos/HACT.Dtos.csproj
+++ b/HACT.Dtos/HACT.Dtos.csproj
@@ -5,6 +5,7 @@
     <PackageId>HACT.Dtos</PackageId>
     <Authors>Made Tech</Authors>
     <Company>City Of Lincoln Council</Company>
+    <RepositoryUrl>https://github.com/City-of-Lincoln-Council/HACT.Dtos</RepositoryUrl>
   </PropertyGroup>
   
 </Project>
