--- a/HACT.Generator/HACT.Generator.csproj
+++ b/HACT.Generator/HACT.Generator.csproj
@@ -5,5 +5,8 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="NJsonSchema.CodeGeneration.CSharp" Version="10.5.2" />
+    </ItemGroup>
 
 </Project>
