--- a/HACT.Dtos/HACT.Dtos.csproj
+++ b/HACT.Dtos/HACT.Dtos.csproj
@@ -7,5 +7,9 @@
     <Company>City Of Lincoln Council</Company>
     <RepositoryUrl>https://github.com/City-of-Lincoln-Council/HACT.Dtos</RepositoryUrl>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
   
 </Project>
