--- a/HACT.Dtos/HACT.Dtos.csproj
+++ b/HACT.Dtos/HACT.Dtos.csproj
@@ -3,9 +3,9 @@
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <PackageId>HACT.Dtos</PackageId>
-    <Authors>Made Tech</Authors>
-    <Company>City Of Lincoln Council</Company>
-    <RepositoryUrl>https://github.com/City-of-Lincoln-Council/HACT.Dtos</RepositoryUrl>
+    <Authors>London Borough of Hackney Council</Authors>
+    <Company>London Borough of Hackney Council</Company>
+    <RepositoryUrl>https://github.com/LBHackney-IT/HACT.Dtos</RepositoryUrl>
   </PropertyGroup>
 
   <ItemGroup>
