--- a/HACT.Dtos.Hackney/HACT.Dtos.Hackney.csproj
+++ b/HACT.Dtos.Hackney/HACT.Dtos.Hackney.csproj
@@ -2,10 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <PackageId>HACT.Dtos</PackageId>
+    <PackageId>HACT.Dtos.Hackney</PackageId>
     <Authors>London Borough of Hackney Council</Authors>
     <Company>London Borough of Hackney Council</Company>
     <RepositoryUrl>https://github.com/LBHackney-IT/HACT.Dtos</RepositoryUrl>
+    <RootNamespace>HACT.Dtos</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
