Revert "Rename project to include hackney in the package name"

--- a/HACT.Dtos.Tests/HACT.Dtos.Tests.csproj
+++ b/HACT.Dtos.Tests/HACT.Dtos.Tests.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\HACT.Dtos.Hackney\HACT.Dtos.Hackney.csproj" />
+    <ProjectReference Include="..\HACT.Dtos\HACT.Dtos.csproj" />
   </ItemGroup>
 
 </Project>
